update exceptions and tests